wip on landing page

--- a/html/pages/index.html
+++ b/html/pages/index.html
@@ -14,7 +14,7 @@ title: Home
             <div class="container">
                 <div class="navbar-brand">
                     <a href="index.html" class="navbar-item">
-                        <img src="assets/images/logo/cryptos.svg" alt="">
+                        <img src="assets/images/logo/krypton-gradient.svg" alt="">
                         <span class="brand-name">Krypton</span>
                     </a>
                     <span class="navbar-burger burger" data-target="cloneNavbarMenu">
@@ -26,18 +26,24 @@ title: Home
                 <div id="cloneNavbarMenu" class="navbar-menu">
                     <div class="navbar-end">
                         <div class="navbar-item is-nav-link">
-                            <a class="is-centered-responsive" href="home.html">Token</a>
+                            <a class="is-centered-responsive" href="#">Token</a>
                         </div>
                         <div class="navbar-item is-nav-link">
-                            <a class="is-centered-responsive" href="https://docs.helios.cssninja.io" target="_blank">Ico</a>
+                            <a class="is-centered-responsive" href="#" target="_blank">Ico</a>
                         </div>
                         <div class="navbar-item is-nav-link">
-                            <a class="is-centered-responsive" href="https://cssninja.io" target="_blank">Roadmap</a>
+                            <a class="is-centered-responsive" href="#" target="_blank">Roadmap</a>
                         </div>
                         <div class="navbar-item is-nav-link">
-                            <a href="#" class="button feather-button primary-button is-bold raised has-gradient">
-                                Sign up
-                                <span>Sign up</span>
+                            <a class="is-centered-responsive" href="#" target="_blank">
+                                <img class="telegram" src="assets/images/logo/telegram.svg">
+                                Telegram
+                            </a>
+                        </div>
+                        <div class="navbar-item is-nav-link">
+                            <a href="#" class="button k-button k-primary raised has-gradient slanted">
+                                <span class="text">Sign up</span>
+                                <span class="front-gradient"></span>
                             </a>
                         </div>
                     </div>
@@ -49,7 +55,7 @@ title: Home
             <div class="container">
                 <div class="navbar-brand">
                     <a href="index.html" class="navbar-item">
-                        <img src="assets/images/logo/cryptos.svg" alt="">
+                        <img src="assets/images/logo/krypton.svg" alt="">
                         <span class="brand-name">Krypton</span>
                     </a>
                     <span class="navbar-burger burger" data-target="navbarMenu">
@@ -64,18 +70,21 @@ title: Home
                             <a class="is-centered-responsive" href="#demos">Token</a>
                         </div>
                         <div class="navbar-item is-nav-link">
-                            <a class="is-centered-responsive" href="https://docs.helios.cssninja.io" target="_blank">Ico</a>
+                            <a class="is-centered-responsive" href="#" target="_blank">Ico</a>
                         </div>
                         <div class="navbar-item is-nav-link">
-                            <a class="is-centered-responsive" href="https://cssninja.io" target="_blank">Roadmap</a>
+                            <a class="is-centered-responsive" href="#" target="_blank">Roadmap</a>
                         </div>
                         <div class="navbar-item is-nav-link">
-                            <a class="is-centered-responsive" href="https://cssninja.io" target="_blank">Log in</a>
+                            <a class="is-centered-responsive" href="#" target="_blank">
+                                <img class="telegram" src="assets/images/logo/telegram.svg">
+                                Telegram
+                            </a>
                         </div>
                         <div class="navbar-item">
-                            <a href="#" class="button feather-button primary-button raised has-gradient slanted">
-                                <small>Sign up</small>
-                                <span><small>Sign up</small></span>
+                            <a href="#" class="button k-button k-primary raised has-gradient slanted">
+                                <span class="text">Sign up</span>
+                                <span class="front-gradient"></span>
                             </a>
                         </div>
                     </div>
@@ -86,17 +95,19 @@ title: Home
 
     <img class="hero-square" src="assets/images/bg/hero-square2.svg">
 
-    <div class="animation-wrapper">
-        <div class="particle particle-1"></div>
-        <div class="particle particle-2"></div>
-        <div class="particle particle-3"></div>
-        <div class="particle particle-4"></div>
-    </div>
+    <div id="particles-js"></div>
+
+    <!--div class="animation-wrapper">
+<div class="particle particle-1"></div>
+<div class="particle particle-2"></div>
+<div class="particle particle-3"></div>
+<div class="particle particle-4"></div>
+</div-->
 
     <div class="hero-body">
         <div class="container">
             <div class="columns is-vcentered">
-                <div class="column is-6">
+                <div class="column is-5 is-offset-1">
                     <div class="divider"></div>
                     <h1 class="title is-1 is-light is-semibold is-spaced main-title">Supercharged Blockchain Platform</h1>
                     <h2 class="subtitle is-5 is-light is-thin">
@@ -121,16 +132,20 @@ title: Home
 </li>
 </ul-->
                     <p>
-                        <a href="#start" class="button feather-button primary-button is-bold raised has-gradient is-fat">
-                            Get Started
-                            <span>Get Started</span>
+                        <a href="start" class="button k-button k-primary raised has-gradient is-fat is-bold">
+                            <span class="text">Get Started</span>
+                            <span class="front-gradient"></span>
+                        </a>
+                        <a href="#" class="button k-button k-primary raised has-gradient is-fat is-bold">
+                            <span class="text">Whitepaper</span>
+                            <span class="front-gradient"></span>
                         </a>
                     </p>
 
                 </div>
                 <div class="column is-7">
                     <figure class="image">
-                        <img src="assets/images/bg/blockchain-concept.svg" alt="">
+                        <img src="assets/images/illustrations/krytpon-platform.svg" alt="">
                     </figure>
                 </div>
             </div>
@@ -151,43 +166,138 @@ title: Home
     </div>
 </section>
 
-<section class="section is-medium is-dark">
+<section class="section is-medium is-dark is-relative">
     <div class="container">
         <div class="divider is-centered"></div>
         <h2 class="title is-light is-semibold has-text-centered is-spaced">We have a Mission</h2>
         <h4 class="subtitle is-6 is-light has-text-centered is-compact">Viderer malorum sadipscing cum ei. Eu impetus perfecto sit, no sea labore detraxit. Primis mediocrem necessitatibus an vis. Ut sea pertinax perpetua, eruditi volumus quaestio ex mel, has ei tota homero.</h4>
 
-        <div class="content-wrapper">
+        <div class="content-wrapper is-medium">
             <div class="columns is-vcentered">
                 <div class="column is-4">
                     <div class="feature">
-                        <img src="assets/images/icons/cubes.svg">
-                        <h4 class="title is-6 is-tight is-light">Supercharged</h4>
+                        <img src="assets/images/icons/chained.svg">
+                        <h4 class="title is-6 is-tight is-light">Chaining</h4>
                         <p>Supercharged features to make you happy and lorem ipsum sit dolor amet</p>
                     </div>
                 </div>
                 <div class="column is-4">
                     <div class="feature">
-                        <img src="assets/images/icons/cubes2.svg">
-                        <h4 class="title is-6 is-tight is-light">Supercharged</h4>
+                        <img src="assets/images/icons/stacked.svg">
+                        <h4 class="title is-6 is-tight is-light">Stacking</h4>
                         <p>Supercharged features to make you happy and lorem ipsum sit dolor amet</p>
                     </div>
                 </div>
                 <div class="column is-4">
                     <div class="feature">
-                        <img src="assets/images/icons/cubes3.svg">
-                        <h4 class="title is-6 is-tight is-light">Supercharged</h4>
+                        <img src="assets/images/icons/compact.svg">
+                        <h4 class="title is-6 is-tight is-light">Managing</h4>
                         <p>Supercharged features to make you happy and lorem ipsum sit dolor amet</p>
                     </div>
                 </div>
             </div>
 
             <div class="cta-wrapper has-text-centered">
-                <a href="#" class="button feather-button primary-button is-bold raised has-gradient is-fat">
-                    Get Started
-                    <span>Get Started</span>
+                <a href="#" class="button k-button k-primary raised has-gradient is-fat is-bold">
+                    <span class="text">Get Started</span>
+                    <span class="front-gradient"></span>
                 </a>
             </div>
+        </div>
+    </div>
+
+    <img class="hero-square-2" src="assets/images/bg/hero-square4.svg">
+</section>
+
+<section class="section is-medium is-darker">
+    <div class="container">
+        <div class="divider is-centered"></div>
+        <h2 class="title is-light is-semibold has-text-centered is-spaced">Truly Decentralized Exchange</h2>
+        <h4 class="subtitle is-6 is-light has-text-centered is-compact">Viderer malorum sadipscing cum ei. Eu impetus perfecto sit, no sea labore detraxit. Primis mediocrem necessitatibus an vis. Ut sea pertinax perpetua, eruditi volumus quaestio ex mel, has ei tota homero.</h4>
+
+        <div class="content-wrapper is-large">
+            <div class="columns is-vcentered">
+                <div class="column is-5 is-offset-1">
+                    <div class="side-feature-content">
+
+                        <h3 class="title is-4 is-light"><img src="assets/images/icons/ico/bitbanner.svg"> <span>Token Valorisation</span></h3>
+                        <div class="divider is-long"></div>
+                        <p class="is-light">Viderer malorum sadipscing cum ei. Eu impetus perfecto sit, no sea labore detraxit. Primis mediocrem necessitatibus an vis. Eu impetus perfecto sit, no sea labore detraxit.</p>
+                        <div class="cta-wrapper">
+                            <a href="#" class="button k-button k-primary raised has-gradient is-fat is-bold">
+                                <span class="text">Learn More</span>
+                                <span class="front-gradient"></span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="column is-7">
+                    <img class="side-feature" src="assets/images/illustrations/token.svg">
+                </div>
+            </div>
+
+            <div class="columns is-vcentered">
+                <div class="column is-7">
+                    <img class="side-feature" src="assets/images/illustrations/blockchain-blocks.svg">
+                </div>
+                <div class="column is-5">
+                    <div class="side-feature-content">
+
+                        <h3 class="title is-4 is-light"><img src="assets/images/icons/ico/bitnetwork.svg"> <span>Cascading Blockchain</span></h3>
+                        <div class="divider is-long"></div>
+                        <p class="is-light">Viderer malorum sadipscing cum ei. Eu impetus perfecto sit, no sea labore detraxit. Primis mediocrem necessitatibus an vis. Eu impetus perfecto sit, no sea labore detraxit.</p>
+                        <div class="cta-wrapper">
+                            <a href="#" class="button k-button k-primary raised has-gradient is-fat is-bold">
+                                <span class="text">Read Whitepaper</span>
+                                <span class="front-gradient"></span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="columns is-vcentered">
+                <div class="column is-5 is-offset-1">
+                    <div class="side-feature-content">
+
+                        <h3 class="title is-4 is-light"><img src="assets/images/icons/ico/bitmining.svg"> <span>Crypto Farming</span></h3>
+                        <div class="divider is-long"></div>
+                        <p class="is-light">Viderer malorum sadipscing cum ei. Eu impetus perfecto sit, no sea labore detraxit. Primis mediocrem necessitatibus an vis. Eu impetus perfecto sit, no sea labore detraxit.</p>
+                        <div class="cta-wrapper">
+                            <a href="#" class="button k-button k-primary raised has-gradient is-fat is-bold">
+                                <span class="text">Read Whitepaper</span>
+                                <span class="front-gradient"></span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="column is-7">
+                    <img class="side-feature" src="assets/images/illustrations/crypto-mining.svg">
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="section is-medium is-darkest">
+    <div class="container">
+        <div class="divider is-centered"></div>
+        <h2 class="title is-light is-semibold has-text-centered is-spaced">Secure, Fast and Powerful</h2>
+        <h4 class="subtitle is-6 is-light has-text-centered is-compact">Viderer malorum sadipscing cum ei. Eu impetus perfecto sit, no sea labore detraxit. Primis mediocrem necessitatibus an vis. Ut sea pertinax perpetua, eruditi volumus quaestio ex mel, has ei tota homero.</h4>
+
+        <div class="content-wrapper is-large">
+
+            <div class="flying-tabs-container">
+                <ul class="flying-tabs">
+                    <li class="tab-1 is-active"><a href="javascript:void(0);">ICO</a></li>
+                    <li class="tab-2"><a href="javascript:void(0);">TOKEN</a></li>
+                    <li class="tab-3"><a href="javascript:void(0);">PROFIT</a></li>
+                    <li class="tab-4"><a href="javascript:void(0);">BOUNTY</a></li>
+                    <hr/>
+                </ul>
+            </div>
+
+
         </div>
     </div>
 </section>
