almost finished roadmap page

--- a/html/pages/roadmap.html
+++ b/html/pages/roadmap.html
@@ -28,7 +28,7 @@ title: Roadmap
                     </h2>
                     <!-- CTA -->
                     <p>
-                        <a href="start" class="button k-button k-primary raised has-gradient is-fat is-bold">
+                        <a href="#roadmap" class="button k-button k-primary raised has-gradient is-fat is-bold">
                             <span class="text">More details</span>
                             <span class="front-gradient"></span>
                         </a>
@@ -38,72 +38,156 @@ title: Roadmap
         </div>
     </section>
 
-    <section class="main-timeline">
+    <section id="roadmap" class="main-timeline">
         <ul>
             <li>
                 <div>
-                    <time>1934</time> 
-                    <span class="">
+                    <span class="item-title">Platform Launch</span>
+                    <time>January 16th</time> 
+                    <span class="item-content">
                         At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium
+                    </span>
+                    <span class="more">
+                        <i data-feather="file-text"></i>
+                        <a href="#">Read Techpaper</a>
                     </span>
                 </div>
             </li>
             <li>
                 <div>
-                    <time>1937</time> Proin quam velit, efficitur vel neque vitae, rhoncus commodo mi. Suspendisse finibus mauris et bibendum molestie. Aenean ex augue, varius et pulvinar in, pretium non nisi.
+                    <span class="item-title">Presales starts</span>
+                    <time>February 28th</time> 
+                    <span class="item-content">
+                        At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium
+                    </span>
+                    <span class="more">
+                        <i data-feather="file-text"></i>
+                        <a href="#">Read Whitepaper</a>
+                    </span>
                 </div>
             </li>
             <li>
                 <div>
-                    <time>1940</time> Proin iaculis, nibh eget efficitur varius, libero tellus porta dolor, at pulvinar tortor ex eget ligula. Integer eu dapibus arcu, sit amet sollicitudin eros.
+                    <span class="item-title">ICO starts</span>
+                    <time>March 20th</time> 
+                    <span class="item-content">
+                        At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium
+                    </span>
+                    <span class="more">
+                        <i data-feather="file-text"></i>
+                        <a href="#">Read Whitepaper</a>
+                    </span>
                 </div>
             </li>
             <li>
                 <div>
-                    <time>1943</time> In mattis elit vitae odio posuere, nec maximus massa varius. Suspendisse varius volutpat mattis. Vestibulum id magna est.
+                    <span class="item-title">ICO phase 2</span>
+                    <time>April 20th</time> 
+                    <span class="item-content">
+                        At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium
+                    </span>
+                    <span class="more">
+                        <i data-feather="file-text"></i>
+                        <a href="#">Read Whitepaper</a>
+                    </span>
                 </div>
             </li>
             <li>
                 <div>
-                    <time>1946</time> In mattis elit vitae odio posuere, nec maximus massa varius. Suspendisse varius volutpat mattis. Vestibulum id magna est.
+                    <span class="item-title">Development starts</span>
+                    <time>May 9th</time> 
+                    <span class="item-content">
+                        At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium
+                    </span>
+                    <span class="more">
+                        <i data-feather="file-text"></i>
+                        <a href="#">Read Techpaper</a>
+                    </span>
                 </div>
             </li>
             <li>
                 <div>
-                    <time>1956</time> In mattis elit vitae odio posuere, nec maximus massa varius. Suspendisse varius volutpat mattis. Vestibulum id magna est.
+                    <span class="item-title">Krypton Meetup CA</span>
+                    <time>June 30th</time> 
+                    <span class="item-content">
+                        At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium
+                    </span>
+                    <span class="more">
+                        <i data-feather="map-pin"></i>
+                        <a href="#">More details</a>
+                    </span>
                 </div>
             </li>
             <li>
                 <div>
-                    <time>1957</time> In mattis elit vitae odio posuere, nec maximus massa varius. Suspendisse varius volutpat mattis. Vestibulum id magna est.
+                    <span class="item-title">Krypton Wallet Release</span>
+                    <time>July 25th</time> 
+                    <span class="item-content">
+                        At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium
+                    </span>
+                    <span class="more">
+                        <i data-feather="file-text"></i>
+                        <a href="#">Read Whitepaper</a>
+                    </span>
                 </div>
             </li>
             <li>
                 <div>
-                    <time>1967</time> Aenean condimentum odio a bibendum rhoncus. Ut mauris felis, volutpat eget porta faucibus, euismod quis ante.
+                    <span class="item-title">Chain Alpha Release</span>
+                    <time>August 12th</time> 
+                    <span class="item-content">
+                        At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium
+                    </span>
+                    <span class="more">
+                        <i data-feather="file-text"></i>
+                        <a href="#">Read Techpaper</a>
+                    </span>
                 </div>
             </li>
             <li>
                 <div>
-                    <time>1977</time> Vestibulum porttitor lorem sed pharetra dignissim. Nulla maximus, dui a tristique iaculis, quam dolor convallis enim, non dignissim ligula ipsum a turpis.
+                    <span class="item-title">Token Sale</span>
+                    <time>September 10th</time> 
+                    <span class="item-content">
+                        At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium
+                    </span>
+                    <span class="more">
+                        <i data-feather="file-text"></i>
+                        <a href="#">Read Whitepaper</a>
+                    </span>
                 </div>
             </li>
             <li>
                 <div>
-                    <time>1985</time> In mattis elit vitae odio posuere, nec maximus massa varius. Suspendisse varius volutpat mattis. Vestibulum id magna est.
+                    <span class="item-title">Security Audit</span>
+                    <time>October 15th</time> 
+                    <span class="item-content">
+                        At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium
+                    </span>
+                    <span class="more">
+                        <i data-feather="file-text"></i>
+                        <a href="#">Read Whitepaper</a>
+                    </span>
                 </div>
             </li>
             <li>
                 <div>
-                    <time>2000</time> In mattis elit vitae odio posuere, nec maximus massa varius. Suspendisse varius volutpat mattis. Vestibulum id magna est.
-                </div>
-            </li>
-            <li>
-                <div>
-                    <time>2005</time> In mattis elit vitae odio posuere, nec maximus massa varius. Suspendisse varius volutpat mattis. Vestibulum id magna est.
+                    <span class="item-title">Chain Beta Release</span>
+                    <time>November 25th</time> 
+                    <span class="item-content">
+                        At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium
+                    </span>
+                    <span class="more">
+                        <i data-feather="file-text"></i>
+                        <a href="#">Read Techpaper</a>
+                    </span>
                 </div>
             </li>
         </ul>
     </section>
+    
+    <div class="roadmap-end">
+        <img src="assets/images/illustrations/roadmap-end.svg">
+    </div>
 
 </div>
