fixed some missing links

--- a/html/pages/blog.html
+++ b/html/pages/blog.html
@@ -51,7 +51,7 @@ title: Media
 
                         <!-- Post -->
                         <div class="blog-post">
-                            <a href="#">
+                            <a href="blog-single.html">
                                 <!-- Featured image -->
                                 <div class="featured-image">
                                     <img src="assets/images/media/post4.svg" alt="">
@@ -91,7 +91,7 @@ title: Media
 
                         <!-- Post -->
                         <div class="blog-post">
-                            <a href="#">
+                            <a href="blog-single.html">
                                 <!-- Featured image -->
                                 <div class="featured-image">
                                     <img src="assets/images/media/post1.svg" alt="">
@@ -131,7 +131,7 @@ title: Media
 
                         <!-- Post -->
                         <div class="blog-post">
-                            <a href="#">
+                            <a href="blog-single.html">
                                 <!-- Featured image -->
                                 <div class="featured-image">
                                     <img src="assets/images/media/post5.svg" alt="">
@@ -171,7 +171,7 @@ title: Media
 
                         <!-- Post -->
                         <div class="blog-post">
-                            <a href="#">
+                            <a href="blog-single.html">
                                 <!-- Featured image -->
                                 <div class="featured-image">
                                     <img src="assets/images/media/post2.svg" alt="">
@@ -211,7 +211,7 @@ title: Media
 
                         <!-- Post -->
                         <div class="blog-post">
-                            <a href="#">
+                            <a href="blog-single.html">
                                 <!-- Featured image -->
                                 <div class="featured-image">
                                     <img src="assets/images/media/post3.svg" alt="">
