--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -15,7 +15,7 @@ title: Home
     </div>
 
     <!-- Animated particles -->
-    <div x-data="initHero()" x-init="initParticles()" id="particles-js"></div>
+    <div x-data="initHero()" x-init="initParticles()" id="tsparticles"></div>
 
     <!-- Hero Image and Title -->
     <div class="hero-body">
